# transformfs

./: .versionrc.cjs  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-and-publish.yml
examples/: concat.lua  filter.lua  line_number.lua  static.lua
src/: main.rs  output.rs  transformfs.rs  utils.rs
