[package]
name = "transformfs"
version = "0.1.0"
edition = "2021"
authors = ["DCsunset"]
description = "A read-only FUSE filesystem to transform the content of files with Lua"
readme = "README.md"
repository = "https://github.com/DCsunset/transformfs"
license = "AGPL-3.0"
keywords = ["fs", "fuse", "transform", "file", "lua"]
categories = ["filesystem", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.8", features = ["luajit", "vendored"] }
fuser = { version = "0.14", default-features = false }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["fs"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
daemonize = "0.5"
